优化sql格式化工具类